--- a/src/components/Auth.css
+++ b/src/components/Auth.css
@@ -2,7 +2,7 @@
     background-color: rgb(249, 185, 185);
 } */
 .container{
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     border-radius: 5px;
     position: absolute;
     top: 50%;
@@ -84,11 +84,8 @@
     line-height: 1;
     left: 16px;
     background-color: white;
-  }
-
-.form-group label {
     transform: translate(-5px, 0px) scale(0.8);
-}
+  }
 
 /* .form-group:focus-within label {
     transform: translate(-5px, 0px) scale(0.8);
@@ -152,6 +149,16 @@
     border: 0px;
     cursor: pointer;
     font-size: 1em;
+}
+
+.fg-pass{
+    background-color: #fff;
+    color: blue;
+    text-align: right;
+    border: 0px;
+    cursor: pointer;
+    font-size: 1em;
+    margin: 0px 0px;
 }
 
 .lock-icon{
