--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -32,15 +32,21 @@ img{
     padding: 0.5rem 0 2rem 0;
 }
 
-.hero-text .show{
+.show{
     text-decoration: none;
     background-color: #fff;
     padding: 1rem 2rem;
     border-radius: 5px;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     font-weight: bold;
     letter-spacing: 2px;
     color: #222;
+    transition: 0.3s ease-in-out;
+}
+
+.show:hover{
+    background-color: #01959a;
+    transform: scale(1.5);
 }
 
 @media screen and (max-width:550px) {
